HEATMAP + radar addresses

--- a/radar-app/radar-app.html
+++ b/radar-app/radar-app.html
@@ -13,7 +13,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/scripts.js"></script>
-  	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCMy95QAeFlYo1ZW4I52OhDVLIi3gDfPJg&sensor=false">
+  	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCMy95QAeFlYo1ZW4I52OhDVLIi3gDfPJg&sensor=false&libraries=visualization">
 type="text/javascript"></script>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	
