--- a/radar-app/radar-app.html
+++ b/radar-app/radar-app.html
@@ -28,8 +28,8 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="bower_components/raphael/raphael-min.js"></script>
-    <script src="bower_components/morrisjs/morris.min.js"></script>
-    <script src="js/morris-data.js"></script>
+    <!--script src="bower_components/morrisjs/morris.min.js"></script>
+    <script src="js/morris-data.js"></script-->
     <script src="dist/js/sb-admin-2.js"></script>
 
 </head>
@@ -44,116 +44,80 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Radar Analysis</a>
+                <a class="navbar-brand" href="/index">Radar Analysis</a>
             </div>
 
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="radar-app.html"><i class="fa fa-picture-o"></i> Heat map</a>
+                          <a href="/heat"><i class="fa fa-bar-chart-o fa-fw"></i> Volume Analysis</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="flot.html">Flot Charts</a>
-                                </li>
-                                <li>
-                                    <a href="morris.html">Morris.js Charts</a>
-                                </li>
-                            </ul>
+                            <a href="/area"><i class="fa fa-bar-chart-o fa-fw"></i> Social Analysis</a>
+                        </li>
+                        <li>
+                            <a href="/bar"><i class="fa fa-bar-chart-o fa-fw"></i> Velocity Analysis</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-        <div id="page-wrapper">
-          <div class="row">
-              <div class="col-lg-12">
-                  <h1 class="page-header">Heat map of buses and cars</h1>
-              </div>
-          </div>
-
-          <div id="wrapper">
-            <div class="row">
-                <div class="col-lg-8">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <i class="fa fa-bar-chart-o fa-fw"></i> Heat map
-                    </div>
-                    <div class="panel-body">
-                      {{> hello}}
-                    </div>
-                  </div> 
-                </div>
-              </div>
-            </div>
-                    <!-- <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Area Chart Example
-                            <div class="pull-right">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                        Actions
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu pull-right" role="menu">
-                                        <li><a href="#">Action</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <div id="morris-area-chart"></div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Bar Chart Example
-                            <div class="pull-right">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                        Actions
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu pull-right" role="menu">
-                                        <li><a href="#">Action</a>
-                                        </li> 
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-8">
-                                    <div id="morris-bar-chart"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
-                </div>-->
-                <!-- <div class="col-lg-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Donut Chart Example
-                        </div>
-                        <div class="panel-body">
-                            <div id="morris-donut-chart"></div>
-                            <a href="#" class="btn btn-default btn-block">View Details</a>
-                        </div>
-                    </div>
-                </div> 
-            </div>-->
-        </div>
     </div>
-  <!-- </div> -->
-
 </body>
 
-<template name="hello">
-  <!-- <button>Add Bus Stops</button> -->
-  <div id="map-canvas" style="height: 800px; width: 800px"></div>
+<template name="heat">
+  <div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-8">
+            <h1 class="page-header">Heat map of buses and cars</h1>
+            <div class="panel panel-default">
+            <!-- <div class="panel-heading">
+              <i class="fa fa-bar-chart-o fa-fw"></i> Heat map
+            </div> -->
+            <div class="panel-body">
+              <div id="map-canvas" style="height: 800px; width: 800px"></div>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</template>
+
+<template name="area">
+  <div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Social Analysis</h1>
+            <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3>Public transportation vs. Monthly Income</h3>
+              <h5>Per district</h5>
+            </div>
+            <div class="panel-body">
+              <div id="pie_chart"></div>
+              {{init}}
+            </div>
+          </div> 
+        </div>
+    </div>
+  </div>
+</template>
+
+<template name="bar">
+  <div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Velocity Analysis</h1>
+            <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3>Velocity vs. Number of vehicles/hour</h3>
+            </div>
+            <div class="panel-body">
+              <div id="morris-bar-chart"></div>
+            </div>
+          </div> 
+        </div>
+    </div>
+  </div>
 </template>
